@@ -132,7 +132,10 @@ if test -n "${PERL}"; then
   _R_PROG_PERL_VERSION
 fi
 if test "${r_cv_prog_perl_v5}" != yes; then
-  AC_MSG_ERROR([Building R requires Perl >= 5.8.0])
+  AC_MSG_WARN([Using 'R CMD build|check|Rprof' requires Perl >= 5.8.0])
+else
+  ## in case available at runtime: 'false' is an alternative
+  PERL="/usr/bin/env perl"
 fi
 ])# R_PROG_PERL
 
